spacing fixes

--- a/src/styles/components/_aside.scss
+++ b/src/styles/components/_aside.scss
@@ -12,6 +12,7 @@
       transform: scaleY(1);
       opacity: 1;
       max-height: 9000px;
+      margin-bottom: 20px;
     }
   }
 }
